# Clifford

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  rust-toolchain.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md  spec.md
.github/workflows/: ci.yml  qemu-firmware.yml
benches/: README.md
book/: README.md  book.toml
book/src/: SUMMARY.md  bibliography.md  cross-references.md  decision-index.md  glossary.md  how-to-use.md  preface.md
book/src/part1/: 01-the-problem.md  02-conventional-answers.md  03-the-ga-angle.md
book/src/part2/: 04-d01-sigil-layering.md  05-d02-hybrid-traits.md  06-d03-effect-procedures.md  07-d04-basis-vectors.md  08-d05-automaton-category.md  09-d06-register-blocks.md  10-d07-testing.md  11-d08-short-binding.md  12-d10-interrupts.md  13-d11-sequential.md  14-d13-references.md  15-d14-sigma-loops.md  16-d15-mutation-sugar.md  17-d16-plugin-mutators.md  18-d17-narrow-unsafe.md  19-d19-access-types.md  20-d20-bitfields.md  21-d21-shared-automata.md  22-d22-imperative-kinds.md  23-d23-haskell-clean-fn.md  24-d24-snapshot-operator.md  25-d25-hidden.md  26-d26-rotor-plane-locks.md
book/src/part3/: 22-type-theory.md  23-category-theory.md  24-geometric-algebra.md  25-two-layers.md  26-orthogonality.md  27-mixed-metric.md  28-rotors.md  29-stanley-reisner.md
book/src/part4/: 30-lexer.md  31-parser.md  32-ast.md  33-resolver.md  34-types.md  35-check.md  36-ortho.md  37-codegen.md
book/src/part5/: 38-first-program.md  39-firmware.md  40-kernel.md  41-migration-rust.md  42-migration-c.md
crates/ast/: Cargo.toml
crates/ast/src/: lib.rs
crates/check/: Cargo.toml
crates/check/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/codegen/: Cargo.toml
crates/codegen/src/: lib.rs
crates/effect/: Cargo.toml
crates/effect/src/: lib.rs
crates/lexer/: Cargo.toml
crates/lexer/src/: lib.rs
crates/ortho/: Cargo.toml
crates/ortho/src/: lib.rs
crates/parser/: Cargo.toml
crates/parser/src/: lib.rs
crates/resolve/: Cargo.toml
crates/resolve/src/: lib.rs
crates/stdlib/: Cargo.toml
crates/stdlib/cl/: audit.cl  audit_shadow_sanitizer.cl
crates/stdlib/src/: lib.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs
docs/: CLIFFORD_SPEC.md  DECISIONS.md  architecture.md  clifford_spec_draft0.docx  decision-audit-2026-05.md  foundations.md  ortho-atomic-attribute.md  ortho-priority-aware-inference.md  ortho-sequential-attribute.md  snapshot-attribute.md
docs/adr/: 0001-rust-as-implementation-language.md  0002-shared-automata-mutator-multivectors.md  0003-haskell-clean-fn-discipline.md  0004-snapshot-boundary-operator.md  0005-rotor-plane-confined-locks.md  0006-runtime-distributed-multivector-engine.md
docs/posts/: 2026-05-08-v0.1.0-release.md
docs/research/: README.md  ga-across-scales.md  ga-rotor-locks.md  ga-shared-automata.md  synchronous-dataflow.md
examples/: README.md  audit_marker_demo.cl  buffer_init_sigma.cl  crc32.cl  crc32_host.c  dual_uart_telemetry.cl  sequential_attribute_demo.cl  staged_pose_handoff.cl  traffic_classifier.cl  uart_fsm.cl  v02_showcase.cl
tests/: README.md
tests/qemu/: README.md  firmware_smoke.cl  harness.c  link.ld  run.sh  startup.c
