[package]
name = "clifford-codegen"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "LLVM IR code generation for the Clifford compiler. Implements §8 of CLIFFORD_SPEC.md."

# This crate may use `unsafe` per CLAUDE.md §3.1 (codegen + stdlib are the
# only allowed sites). Every `unsafe` block requires a `// SAFETY:` comment.

[dependencies]
clifford-ast.workspace = true
clifford-effect.workspace = true
clifford-ortho.workspace = true
thiserror.workspace = true

# Text-form LLVM IR emission in v0.1 (no native LLVM linkage). The
# inkwell-vs-llvm-sys decision is deferred until a slice needs the
# native binding (target-machine introspection, JIT, or in-process
# verification). Until then the IR is emitted as a `.ll` text the
# user can pipe to `llc` / `clang` externally.

[dev-dependencies]
# Tests parse + resolve real Clifford source to exercise lowering
# end-to-end without re-implementing the upstream phases.
clifford-lexer.workspace = true
clifford-parser.workspace = true
