[package]
name = "clifford-lexer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Lexer for the Clifford language. Implements §1 of CLIFFORD_SPEC.md."

[dependencies]
thiserror.workspace = true

# dev-deps (proptest, insta) added back when first property / snapshot
# test arrives. Both currently pull in transitive crates that need newer
# rustc than the pinned 1.76; toolchain bump tracked separately.
