[package]
name = "clifford-ortho"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "GA Orthogonality Engine — the heart of Clifford. Implements §7 of CLIFFORD_SPEC.md and the product-existence theorem in Appendix B."

# This crate is the highest-risk component (per CLAUDE.md §4):
# - 100% line + branch coverage required.
# - Property tests required for every public function.
# - Two reviewers required for every PR.
# - Error messages must name original source identifiers, never `e_n` indices.

[dependencies]
clifford-ast.workspace = true
clifford-effect.workspace = true
thiserror.workspace = true

# dev-deps (proptest required for ortho per CLAUDE.md §4) added when first
# property test arrives. Both currently pull transitive crates needing newer
# rustc than the pinned 1.76.

[dev-dependencies]
# Ortho's integration tests parse + resolve real Clifford source so the
# verifier exercises against actual MutationProfiles, not synthetic ones.
clifford-lexer.workspace = true
clifford-parser.workspace = true
clifford-resolve.workspace = true
